# rsc-cli

./: .gitignore  LICENSE  README.md  pyproject.toml
createbundle/: createbundle.ps1
hprsctool/: hprsctool.py
hprsctool/comm/: redfish_messages.py  remote_system_controller.py
hprsctool/comm/operations/: cert.py  manager.py  network.py  system.py  task.py  trusted_cert.py
hprsctool/commands/: system.py  task.py
hprsctool/commands/manager/: cert.py  manager.py  network.py  time.py  trusted_cert.py
hprsctool/models/: certificate.py  ethernet_interface.py  manager.py  manager_network_protocol.py  system.py  task.py
tests/: test_cert_manager_commands.py  test_manager_commands.py  test_manager_network.py  test_models.py  test_redfish_config.py  test_redfish_messages.py  test_system_ops.py  test_tasks_operations.py  test_time_manager_commands.py  test_trusted_cert_manager_commands.py
